--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -12,6 +12,13 @@
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('about') }}">About</a>
       </li>
+      {% if current_user.is_authenticated %}
+      
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('sec') }}">Secure Page</a>
+      </li>
+      
+      {% endif % }
     </ul>
 
     <ul class="navbar-nav">
@@ -19,5 +26,6 @@
         <a class="nav-link" href="{{ url_for('login') }}">Login</a>
       </li>
     </ul>
+    
   </div>
 </nav>
